<resources>
    <string name="app_name">My Calculator</string>
    <string name="first_number">First Number</string>
    <string name="second_number">Second Number</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="error">Divider can not be zero!</string>
    <string name="hint">Enter a number</string>
</resources>
