<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.apple.calculator.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_number"
        android:textSize="20sp"
        android:padding="5dp"
        android:layout_margin="15dp"/>

    <EditText
        android:id="@+id/edit_text_one"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:padding = "5dp"
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:inputType="phone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_number"
        android:textSize="20sp"
        android:padding="5dp"
        android:layout_margin="15dp"/>

    <EditText
        android:id="@+id/edit_text_two"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:padding = "5dp"
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:inputType="phone"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/calculator_add"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:textSize="20sp"
            android:text="@string/add"/>


        <Button
            android:id="@+id/calculator_minus"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:textSize="20sp"
            android:text="@string/minus"/>

        <Button
            android:id="@+id/calculator_multiply"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:textSize="20sp"
            android:text="@string/multiply"/>

        <Button
            android:id="@+id/calculator_divide"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:textSize="20sp"
            android:text="@string/divide"/>


    </LinearLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:textSize="20sp"
        android:layout_margin="15dp"/>

</LinearLayout>
